--- a/microservice-parent/framework-parent/framework-core-util/pom.xml
+++ b/microservice-parent/framework-parent/framework-core-util/pom.xml
@@ -39,5 +39,9 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
     </dependencies>
 </project>
