--- a/microservice-parent/security-parent/pom.xml
+++ b/microservice-parent/security-parent/pom.xml
@@ -25,21 +25,6 @@
         <dependencies>
             <dependency>
                 <groupId>com.kalix.fabric8.microservice</groupId>
-                <artifactId>framework-core-api</artifactId>
-                <version>1.0-SNAPSHOT</version>
-            </dependency>
-            <dependency>
-                <groupId>com.kalix.fabric8.microservice</groupId>
-                <artifactId>security-api</artifactId>
-                <version>1.0-SNAPSHOT</version>
-            </dependency>
-            <dependency>
-                <groupId>com.kalix.fabric8.microservice</groupId>
-                <artifactId>jwt-api</artifactId>
-                <version>1.0-SNAPSHOT</version>
-            </dependency>
-            <dependency>
-                <groupId>com.kalix.fabric8.microservice</groupId>
                 <artifactId>user-api</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
@@ -63,6 +48,26 @@
                 <artifactId>jackson-annotations</artifactId>
                 <version>2.8.10</version>
             </dependency>
+            <dependency>
+                <groupId>com.kalix.fabric8.microservice</groupId>
+                <artifactId>framework-core-api</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>com.kalix.fabric8.microservice</groupId>
+                <artifactId>security-api</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>com.kalix.fabric8.microservice</groupId>
+                <artifactId>jwt-api</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <!--<dependency>-->
+                <!--<groupId>com.kalix.fabric8.microservice</groupId>-->
+                <!--<artifactId>cache-api</artifactId>-->
+                <!--<version>1.0-SNAPSHOT</version>-->
+            <!--</dependency>-->
         </dependencies>
     </dependencyManagement>
     
