--- a/microservice-parent/security-parent/pom.xml
+++ b/microservice-parent/security-parent/pom.xml
@@ -63,11 +63,11 @@
                 <artifactId>jwt-api</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
-            <!--<dependency>-->
-                <!--<groupId>com.kalix.fabric8.microservice</groupId>-->
-                <!--<artifactId>cache-api</artifactId>-->
-                <!--<version>1.0-SNAPSHOT</version>-->
-            <!--</dependency>-->
+            <dependency>
+                <groupId>com.kalix.fabric8.microservice</groupId>
+                <artifactId>cache-api</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     
