add many function

--- a/news-parent/trying-news-biz/pom.xml
+++ b/news-parent/trying-news-biz/pom.xml
@@ -29,6 +29,11 @@
             <groupId>com.kalix.admin.audit</groupId>
             <artifactId>admin-audit-biz</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.fusesource.mqtt-client</groupId>
+            <artifactId>mqtt-client</artifactId>
+            <version>1.14</version>
+        </dependency>
     </dependencies>
 
     <build>
