--- a/microservice-parent/client-rest-test/src/test/resources/env.properties
+++ b/microservice-parent/client-rest-test/src/test/resources/env.properties
@@ -1,11 +1,11 @@
 #login.uri=http://localhost:8181/kalix/
-login.uri=http://localhost:8181/camel/login
+login.uri=http://localhost:8181/login.jsp
 login.username=admin
 login.password=123
 
 ################# URI ############################################
 getall.uri=http://localhost:8181/camel/rest/ms_users
-post.uri=http://localhost:8181/camel/rest/users
+post.uri=http://localhost:8181/camel/rest/newss
 get.uri=http://localhost:8181/camel/rest/users/%d
 delete.uri=http://localhost:8181/camel/rest/users/%d
 put.uri=http://localhost:8181/camel/rest/users/%d
