--- a/news-parent/trying-news-biz/pom.xml
+++ b/news-parent/trying-news-biz/pom.xml
@@ -34,6 +34,17 @@
             <artifactId>mqtt-client</artifactId>
             <version>1.14</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.sshd</groupId>
+            <artifactId>sshd-core</artifactId>
+            <version>0.7.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-quartz2</artifactId>
+            <version>2.23.0</version>
+        </dependency>
     </dependencies>
 
     <build>
