--- a/event-parent/trying-event-dao/pom.xml
+++ b/event-parent/trying-event-dao/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>framework-core-impl</artifactId>
             <version>1.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.cmpn</artifactId>
+            <version>6.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
