--- a/event-parent/trying-event-biz/pom.xml
+++ b/event-parent/trying-event-biz/pom.xml
@@ -26,48 +26,9 @@
             <artifactId>trying-event-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.kalix.admin.audit</groupId>
-            <artifactId>admin-audit-biz</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.fusesource.mqtt-client</groupId>
-            <artifactId>mqtt-client</artifactId>
-            <version>1.14</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.sshd</groupId>
-            <artifactId>sshd-core</artifactId>
-            <version>0.7.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-quartz2</artifactId>
-            <version>2.23.0</version>
-        </dependency>
-
-        <!--<dependency>-->
-            <!--<groupId>org.java-websocket</groupId>-->
-            <!--<artifactId>Java-WebSocket</artifactId>-->
-            <!--<version>1.4.0</version>-->
-        <!--</dependency>-->
-
-        <!--<dependency>-->
-            <!--<groupId>javax</groupId>-->
-            <!--<artifactId>javaee-api</artifactId>-->
-            <!--<version>7.0</version>-->
-            <!--&lt;!&ndash;<scope>provided</scope>&ndash;&gt;-->
-        <!--</dependency>-->
-        <dependency>
-            <groupId>org.glassfish.tyrus.bundles</groupId>
-            <artifactId>tyrus-standalone-client</artifactId>
-            <version>1.13</version>
-        </dependency>
-        <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>osgi.annotation</artifactId>
-            <version>7.0.0</version>
-            <scope>provided</scope>
+            <artifactId>osgi.cmpn</artifactId>
+            <version>6.0.0</version>
         </dependency>
     </dependencies>
 
