--- a/event-parent/trying-event-biz/pom.xml
+++ b/event-parent/trying-event-biz/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>osgi.cmpn</artifactId>
             <version>6.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>2.1</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
